Changed file extension to ".yog".

--- a/.gitignore
+++ b/.gitignore
@@ -77,8 +77,8 @@ ext/Makefile.common
 ext/Makefile.in
 ext/concurrent/Makefile
 ext/uname/Makefile
-ext/wx.yg
-ext/wx/wx.yg
+ext/wx.yog
+ext/wx/wx.yog
 ext/wx/wxWidgets/.pch/
 ext/wx/wxWidgets/bk-deps
 ext/wx/wxWidgets/bk-make-pch
@@ -280,13 +280,13 @@ lib/Makefile
 lib/Makefile.in
 lib/c/Makefile
 lib/c/Makefile.in
-lib/c/grammar.yg
-lib/sdl.yg
+lib/c/grammar.yog
+lib/sdl.yog
 lib/sdl/Makefile
 lib/sdl/Makefile.in
-lib/sdl/image.yg
-lib/sdl/mixer.yg
-lib/sdl/ttf.yg
+lib/sdl/image.yog
+lib/sdl/mixer.yog
+lib/sdl/ttf.yog
 libffi/Makefile
 libffi/fficonfig.h
 libffi/include/Makefile
@@ -352,11 +352,11 @@ tests/TestO.db
 tests/gc/Makefile
 tests/gc/Makefile.in
 tests/gc/test-mark-sweep-compact
-tests/gram.yg
+tests/gram.yog
 tests/h2yog.h
-tests/run_h2yog.yg
+tests/run_h2yog.yog
 tests/test_argtype_*
-tests/test_h2yog.yg
+tests/test_h2yog.yog
 tests/test_package4.ilk
 tests/test_package5.ilk
 tests/test_package6.ilk
@@ -638,6 +638,5 @@ vim/ftdetect/Makefile
 vim/ftdetect/Makefile.in
 vim/ftplugin/Makefile
 vim/ftplugin/Makefile.in
-vim/ftplugin/yg.vim
 y.output
 yog*
