--- a/lib/c/Makefile.am
+++ b/lib/c/Makefile.am
@@ -3,10 +3,10 @@ YOG = $(top_srcdir)/src/yog
 LALR1GRAM = $(top_srcdir)/bin/lalr1gram.yog
 SRC = grammar.yogram
 
-bin_PROGRAMS = grammar.yg
-grammar_yg_SOURCES = $(SRC)
+bin_PROGRAMS = grammar.yog
+grammar_yog_SOURCES = $(SRC)
 
-grammar.yg: $(SRC) $(LALR1GRAM)
+grammar.yog: $(SRC) $(LALR1GRAM)
 	$(YOG) $(LALR1GRAM) $@ $(SRC)
 
 # vim: tabstop=8 shiftwidth=8 noexpandtab
