--- a/vim/ftplugin/Makefile.am
+++ b/vim/ftplugin/Makefile.am
@@ -2,9 +2,6 @@
 include $(top_srcdir)/vim/Makefile.common
 
 datadir = $(VIM_DIR)/ftplugin
-data_DATA = yg.vim yog.vim yogram.vim
-
-yg.vim: yog.vim
-	ln -s yog.vim $@
+data_DATA = yog.vim yogram.vim
 
 # vim: tabstop=8 shiftwidth=8 noexpandtab filetype=automake
