--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,7 @@
 .gdb_history
 .gdbinit
 .libs
-.lock-waf*
-.waf*
+.tissue
 Debug
 Makefile.in
 Release
@@ -42,7 +41,6 @@ aclocal.m4
 autom4te.cache
 bin/Makefile
 bin/Makefile.in
-build
 build-stamp
 config.h
 config.log
