Changed BigDigits to compile with TissuePaper.

--- a/BigDigits/Makefile
+++ b/BigDigits/Makefile
@@ -1,12 +1,12 @@
 
-WAF = ./waf
+CMD = ./blow
 
 .PHONY: build
 
 all: build
 
 build:
-	@$(WAF) build
+	@$(CMD) build
 
 clean:
-	@$(WAF) clean
+	@$(CMD) clean
