Removed files of autotools or required by autotools.

--- a/.gitignore
+++ b/.gitignore
@@ -35,26 +35,17 @@
 .libs
 .tissue
 Debug
-Makefile.in
 Release
-aclocal.m4
-autom4te.cache
 bin/Makefile
 bin/Makefile.in
-build-stamp
-config.h
-config.log
-config.status
-config.status.lineno
-config.status.log
-configure.lineno
-configure.log
-configure.scan
 core
 core.*
 corgi/Makefile
 corgi/_configs.sed
+corgi/config.status
 corgi/doc/conf.py
+corgi/include/corgi/config.h
+corgi/include/corgi/stamp-h1
 corgi/rc
 corgi/src/Makefile
 corgi/src/corgi
@@ -126,6 +117,7 @@ lib/sdl/image.yog
 lib/sdl/mixer.yog
 lib/sdl/ttf.yog
 libffi/Makefile
+libffi/config.status
 libffi/fficonfig.h
 libffi/include/Makefile
 libffi/include/ffi.h
@@ -134,6 +126,7 @@ libffi/libffi.pc
 libffi/man/Makefile
 libffi/src/.dirstamp
 libffi/src/x86/.dirstamp
+libffi/stamp-h1
 libffi/testsuite/Makefile
 libtool
 onig/Makefile
@@ -183,7 +176,6 @@ src/yog2euc_jp3.inc
 src/yog2shift_jis1.inc
 src/yog2shift_jis2.inc
 src/yog2shift_jis3.inc
-stamp-h1
 tags
 tests/Makefile
 tests/TestO.db
@@ -475,5 +467,4 @@ vim/ftdetect/Makefile
 vim/ftdetect/Makefile.in
 vim/ftplugin/Makefile
 vim/ftplugin/Makefile.in
-y.output
 yog*
