Updated corgi to version 1.0.0dev1.

--- a/.gitignore
+++ b/.gitignore
@@ -40,16 +40,9 @@ bin/Makefile
 bin/Makefile.in
 core
 core.*
-corgi/Makefile
-corgi/_configs.sed
-corgi/config.status
-corgi/doc/conf.py
-corgi/include/corgi/config.h
-corgi/include/corgi/stamp-h1
-corgi/rc
-corgi/src/Makefile
-corgi/src/corgi
-corgi/tests/Makefile
+corgi/.lock-waf*
+corgi/.waf*
+corgi/build
 doc/Makefile
 doc/index.html
 ext/Makefile
